force-app/main/default/objects/Asset/fields/Created_By_Order_Manager__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Order_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By Order Manager</label>
    <type>Checkbox</type>
</CustomField>